# zenoh-backend-filesystem

./: .gitignore  Cargo.toml  EXAMPLE_CONFIG.json5  Jenkinsfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release-nightly.yml  release.yml
src/: data_info_mgt.rs  files_mgt.rs  lib.rs
