#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
name = "zenoh-backend-filesystem"
version = "0.11.0-dev"
repository = "https://github.com/eclipse-zenoh/zenoh-backend-filesystem"
homepage = "http://zenoh.io"
authors = [
    "kydos <angelo@icorsaro.net>",
    "Julien Enoch <julien@enoch.fr>",
    "Olivier Hécart <olivier.hecart@zettascale.tech>",
    "Luca Cominardi <luca.cominardi@zettascale.tech>",
    "Sreeja Nair <sreeja.nair@zettascale.tech>",
]
edition = "2021"
license = "EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Backend for Zenoh using the file system"

[lib]
name = "zenoh_backend_fs"
crate-type = ["cdylib", "rlib"]

[features]
stats = ["zenoh/stats"]

[dependencies]
async-std = "=1.12.0"
async-trait = "0.1.66"
dunce = "1.0.3"
env_logger = "0.10.0"
git-version = "0.3.5"
home = "0.5.4"
lazy_static = "1.4.0"
log = "0.4.17"
mime_guess = "2.0.4"
regex = "1.7.1"
rocksdb = "0.20.1"
serde_json = "1.0.94"
tempfile = "3.4.0"
uhlc = "0.5.2"
walkdir = "2.3.2"
zenoh = { version = "0.11.0-dev", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master", features = ["unstable"] }
zenoh-codec = { version = "0.11.0-dev", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }
zenoh-collections = { version = "0.11.0-dev", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }
zenoh-core = { version = "0.11.0-dev", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }
zenoh-protocol = { version = "0.11.0-dev", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }
zenoh-util = { version = "0.11.0-dev", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }
zenoh_backend_traits = { version = "0.11.0-dev", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }

[build-dependencies]
rustc_version = "0.4.0"

[package.metadata.deb]
name = "zenoh-backend-filesystem"
maintainer = "zenoh-dev@eclipse.org"
copyright = "2022 ZettaScale Technology"
section = "net"
license-file = ["LICENSE", "0"]
depends = "zenoh-plugin-storage-manager (=0.11.0-dev-1)"
