#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
name = "zenoh-backend-filesystem"
version = "1.7.2"
repository = "https://github.com/eclipse-zenoh/zenoh-backend-filesystem"
homepage = "http://zenoh.io"
authors = [
    "kydos <angelo@icorsaro.net>",
    "Julien Enoch <julien@enoch.fr>",
    "Olivier Hécart <olivier.hecart@zettascale.tech>",
    "Luca Cominardi <luca.cominardi@zettascale.tech>",
    "Sreeja Nair <sreeja.nair@zettascale.tech>",
]
edition = "2021"
license = "EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Backend for Zenoh using the file system"

[lib]
name = "zenoh_backend_fs"
crate-type = ["cdylib", "rlib"]

[features]
stats = ["zenoh/stats"]
dynamic_plugin = []
default = ["dynamic_plugin"]

[dependencies]
async-trait = "0.1.89"
dunce = "1.0.3"
git-version = "0.3.5"
home = "0.5.4"
lazy_static = "1.4.0"
librocksdb-sys = "=0.17.1"
mime_guess = "2.0.4"
regex = "1.7.1"
rocksdb = "0.23.0"
serde_json = "1.0.117"
tempfile = "3.4.0"
tokio = { version = "1.35.1", default-features = false } # Default features are disabled due to some crates' requirements
tracing = "0.1"
uhlc = "0.5.2"
walkdir = "2.3.2"
zenoh = { features = [
    "unstable",
    "internal",
    "plugins",
], version = "1.7.2", git = "https://github.com/eclipse-zenoh/zenoh.git" , branch = "main" }
zenoh_backend_traits = { version = "1.7.2", git = "https://github.com/eclipse-zenoh/zenoh.git" , branch = "main" }
zenoh-plugin-trait = { version = "1.7.2", git = "https://github.com/eclipse-zenoh/zenoh.git" , branch = "main" }
zenoh-ext = { version = "1.7.2", git = "https://github.com/eclipse-zenoh/zenoh.git" , branch = "main" }
zenoh-util = { version = "1.7.2", git = "https://github.com/eclipse-zenoh/zenoh.git" , branch = "main" }

[build-dependencies]
rustc_version = "0.4.0"

[package.metadata.deb]
name = "zenoh-backend-filesystem"
maintainer = "zenoh-dev@eclipse.org"
copyright = "2022 ZettaScale Technology"
section = "net"
license-file = ["LICENSE", "0"]
depends = "zenoh-plugin-storage-manager (=1.7.2)"
